Adding automatic update in index page and updating translations

--- a/themes/gil-galad/style.css
+++ b/themes/gil-galad/style.css
@@ -735,7 +735,7 @@ width:974px;
 }
 #header #title
 {
-background-image:url(images/planet.png);
+background-image:url(images/logo.png);
 background-position:right top;
 background-repeat:no-repeat;
 width:950px;
