--- a/themes/gandalf/css/core.css
+++ b/themes/gandalf/css/core.css
@@ -538,3 +538,38 @@ background: #ffffff;
 padding:5px 10px 5px 10px;
 margin:10px 0px 10px 0px;
 }
+
+.votes {
+display:block;
+float:right;
+margin-top:-10px;
+width:42px;
+}
+.vote span#imgoui {
+display:block;
+background:url('../images/oui.png') no-repeat;
+height:18px;
+width:18px;
+float:left;
+}
+.vote span#imgnon {
+float:right;
+display:block;
+background:url('../images/warn.png') no-repeat;
+height:18px;
+width:18px;
+}
+.avote span#imgoui {
+display:block;
+background:url('../images/oui-light.png') no-repeat;
+height:18px;
+width:18px;
+float:left;
+}
+.avote span#imgnon {
+float:right;
+display:block;
+background:url('../images/warn-light.png') no-repeat;
+height:18px;
+width:18px;
+}
