Evol 814: IHM Pending User api

--- a/admin/meta/css/styles.css
+++ b/admin/meta/css/styles.css
@@ -1379,20 +1379,30 @@ p.clear {
 	-webkit-box-shadow: 0 1px 5px #333;
 	z-index:101;
 }
-.flash_box.flash_error{
+.flash_box.flash_error {
     background: url(../icons/false.png) 8px no-repeat;
 	background-color: #ffe3e3;
 	border-color: #dd0000;
 	color: #550000;
 	padding-left: 30px;
 }
-.flash_box.flash_notice{
+
+.flash_box.flash_error ul {
+	margin-left: 15px;
+}
+
+.flash_box.flash_notice {
     background: url(../icons/true.png) 8px no-repeat;
 	background-color: #dfffdf;
 	border-color: #9fcf9f;
 	color: #005f00;
 	padding-left: 30px;
 }
+
+.flash_box.flash_notice ul {
+	margin-left: 15px;
+}
+
 .flash_box.flash_warning{
 	background: url(../icons/warn.png) 8px no-repeat;
 	background-color: #FFEBC1;
@@ -1400,6 +1410,11 @@ p.clear {
 	color: #A6750C;
 	padding-left: 30px;
 }
+
+.flash_box.flash_warning ul {
+	margin-left: 15px;
+}
+
 a.flash_box_close{
 	float:right;
 	width:26px;
