--- a/themes/gil-galad/css/core.css
+++ b/themes/gil-galad/css/core.css
@@ -11,7 +11,7 @@ body
 
 h4
 {
-font-size:15px;	
+font-size:15px;
 }
 
 #tour
@@ -674,7 +674,7 @@ color:#ae3324;
 h2#informations_title
 {
 margin-left:27px;
-padding-top:8px;	
+padding-top:8px;
 }
 #colonne h2
 {
@@ -697,7 +697,7 @@ border:1px solid #C00000;
 color:#FFFFFF;
 font-size:20px;
 margin:16px;
-padding:5px 5px 5px 10px;	
+padding:5px 5px 5px 10px;
 }
 div.informations
 {
@@ -834,4 +834,16 @@ color:#fff;
 text-decoration:none;
 font-size:11px;
 margin-right:20px;
+}
+div.post_description div.tag-line {
+    margin : 5px 5px;
+}
+div.post_description span.post-tag {
+	margin: 0px 5px;
+    padding: 0px 6px 1px 6px;
+	background: #edbe59;
+	-moz-border-radius: 8px;
+	-khtml-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
 }
