--- a/themes/gandalf/css/core.css
+++ b/themes/gandalf/css/core.css
@@ -168,7 +168,7 @@ text-decoration:underline;
 
 #mainmenu a:hover {color:#fff;}
 
-#mainmenu_search {
+#search_text {
 border:1px #DCDCDC solid;
 height:15px;
 margin-top:9px;
@@ -576,10 +576,34 @@ width:18px;
 div.post_description div.tag-line {
     margin : 5px 5px;
 }
-div.post_description span.post-tag {
+/********************************/
+/**           PAGE STATUS      **/
+/********************************/
+#filter-status{
+position:relative;
+width:180px;
+padding-left:21px;
+font-size:11px;
+padding-bottom:13px;
+padding-right:21px;
+text-align:left;
+}
+div.post_description div.tag-line {
+    margin : 5px 5px;
+}
+span.tag {
 	margin: 0px 5px;
     padding: 0px 6px 1px 6px;
 	background: #edbe59;
+	-moz-border-radius: 8px;
+	-khtml-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+}
+span.user {
+	margin: 0px 5px;
+    padding: 0px 6px 1px 6px;
+	background: #78bf7b;
 	-moz-border-radius: 8px;
 	-khtml-border-radius: 8px;
 	-webkit-border-radius: 8px;
