--- a/themes/gil-galad/css/core.css
+++ b/themes/gil-galad/css/core.css
@@ -226,13 +226,13 @@ color:#393f4d;
 color:#fff;
 background:url("../images/bg-li.png");
 }
-#recherche_global{
+#search_form{
 position:relative;
 float:right;
 padding-right:25px;
 margin-top:3px;
 }
-#recherche {
+#search_text {
 position:relative;
 float:left;
 width:174px;
@@ -835,13 +835,35 @@ text-decoration:none;
 font-size:11px;
 margin-right:20px;
 }
+
+/********************************/
+/**           PAGE STATUS      **/
+/********************************/
+#filter-status{
+position:relative;
+width:180px;
+padding-left:21px;
+font-size:11px;
+padding-bottom:13px;
+padding-right:21px;
+text-align:left;
+}
 div.post_description div.tag-line {
     margin : 5px 5px;
 }
-div.post_description span.post-tag {
+span.tag {
 	margin: 0px 5px;
     padding: 0px 6px 1px 6px;
 	background: #edbe59;
+	-moz-border-radius: 8px;
+	-khtml-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+}
+span.user {
+	margin: 0px 5px;
+    padding: 0px 6px 1px 6px;
+	background: #78bf7b;
 	-moz-border-radius: 8px;
 	-khtml-border-radius: 8px;
 	-webkit-border-radius: 8px;
